--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="#sobremi">Sobre Mi</a></li>
-                    <li><a href="#curriculum">Curriculum</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#sobremi" onclick="seleccionar()">Sobre Mi</a></li>
+                    <li><a href="#curriculum" onclick="seleccionar()">Curriculum</a></li>
+                    <li><a href="#contacto" onclick="seleccionar()">Contacto</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
@@ -43,9 +43,9 @@
                 <h1>Matías Icardo</h1>
                 <h2>Front End Junior</h2>
                 <div class="redes">
-                    <a href="#"><img src="./src/multimedias/instagram.png" alt=""></a>
-                    <a href="#"><img src="./src/multimedias/twitter.png" alt=""></a>
-                    <a href="#"><img src="./src/multimedias/linkedin.png" alt=""></a>
+                    <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img src="./src/multimedias/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"  alt=""></a>
+                    <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img src="./src/multimedias/linkedin.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -138,7 +138,9 @@
                 </div>
             </div>
         </div>
-
+        <button>
+            Descargar CV <i class="fa-solid fa-download"></i>
+        </button>
     </section>
     <!-- contacto-->
     <section id="contacto" class="contacto">
@@ -163,7 +165,20 @@
             </div>
         </div>
     </section>
+    <!-- footer-->
+    <footer>
+        <a href="#inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img src="./src/multimedias/instagram.png" alt=""></a>
+            <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"  alt=""></a>
+            <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img src="./src/multimedias/linkedin.png" alt=""></a>
+        </div>
+    </footer>
     </main>
+    <!--Js-->
+    <script src="main.js"></script>
 </body>
 
 </html>
