--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                 <h1>Matías Icardo</h1>
                 <h2>Front End Junior</h2>
                 <div class="redes">
-                    <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img src="./src/multimedias/instagram.png" alt=""></a>
-                    <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"  alt=""></a>
-                    <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img src="./src/multimedias/linkedin.png" alt=""></a>
+                    <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img
+                            src="./src/multimedias/instagram.png" alt=""></a>
+                    <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"
+                            alt=""></a>
+                    <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img
+                            src="./src/multimedias/linkedin.png" alt=""></a>
                 </div>
             </div>
         </div>
@@ -149,10 +152,12 @@
             <div class="fila">
                 <!--formulario-->
                 <div class="col">
-                    <input type="text" placeholder="Nombre">
-                    <input type="text" placeholder="Apellido">
-                    <input type="text" placeholder="Email">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <form action="" method="post">
+                        <input type="text" name="nombre" placeholder="Nombre">
+                        <input type="text" name="apellido" placeholder="Apellido">
+                        <input type="text" name="email" placeholder="Email">
+                        <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    </form>
                     <button>Enviar mensaje</button>
                 </div>
                 <!-- mapa-->
@@ -171,9 +176,12 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img src="./src/multimedias/instagram.png" alt=""></a>
-            <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"  alt=""></a>
-            <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img src="./src/multimedias/linkedin.png" alt=""></a>
+            <a href="https://www.instagram.com/matiasicardo/" target="_blank"><img src="./src/multimedias/instagram.png"
+                    alt=""></a>
+            <a href="https://twitter.com/icardomatias" target="_blank"><img src="./src/multimedias/twitter.png"
+                    alt=""></a>
+            <a href="https://www.linkedin.com/in/matias-icardo-211b98206/" target="_blank"><img
+                    src="./src/multimedias/linkedin.png" alt=""></a>
         </div>
     </footer>
     </main>
