--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="col mapa">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3345.2810994018405!2d-58.53271618506335!3d-33.0227239830729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95baa83d41976891%3A0x933fcd014b6e8fc5!2zR3V0acOpcnJleiAxOTMwLCBHdWFsZWd1YXljaMO6LCBFbnRyZSBSw61vcw!5e0!3m2!1ses-419!2sar!4v1677265184484!5m2!1ses-419!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%" height="84%" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
