--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
         </div>
         <button>
-            Descargar CV <i class="fa-solid fa-download"></i>
+            <a href="./src/multimedias/AngelMatiasIcardo.pdf" download>Descargar CV <i class="fa-solid fa-download"></i></a>
         </button>
     </section>
     <!-- contacto-->
