--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="fila">
                 <!--formulario-->
                 <div class="col">
-                    <form action="" method="post">
+                    <form action="matuicardo@gmail.com" method="post">
                         <input type="text" name="nombre" placeholder="Nombre">
                         <input type="text" name="apellido" placeholder="Apellido">
                         <input type="text" name="email" placeholder="Email">
